ok pero falta color hotel dark

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar color="warning">
+  <ion-toolbar color="hotel">
     <ion-buttons slot="start">
       <ion-menu-button color="dark" menu="first" class="menuM"></ion-menu-button>
     </ion-buttons>
