--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 <ion-menu side="start" menuId="first" contentId="main">
   <ion-header>
-    <ion-toolbar color="warning">
+    <ion-toolbar color="hotel">
       <ion-title>{{'MENU.menu' | translate }}</ion-title>
     </ion-toolbar>
   </ion-header>
