--- a/src/app/components/new-acomp/new-acomp.component.html
+++ b/src/app/components/new-acomp/new-acomp.component.html
@@ -12,5 +12,5 @@
       <ion-input type="number" [(ngModel)]="dni"></ion-input>
 
   </ion-card-content>
-  <ion-button expand="block" (click)="enviarAcomp()" color="warning">{{'NEWACOMP.guardar' | translate }}</ion-button>
+  <ion-button expand="block" (click)="enviarAcomp()" color="hotel">{{'NEWACOMP.guardar' | translate }}</ion-button>
 </ion-card>
