--- a/src/app/components/new-auto/new-auto.component.html
+++ b/src/app/components/new-auto/new-auto.component.html
@@ -8,5 +8,5 @@
       <ion-input type="text" [(ngModel)]="patente"></ion-input>
 
   </ion-card-content>
-  <ion-button expand="block" (click)="enviarAuto()" color="warning">{{'NEWAUTO.guardar' | translate }}</ion-button>
+  <ion-button expand="block" (click)="enviarAuto()" color="hotel">{{'NEWAUTO.guardar' | translate }}</ion-button>
 </ion-card>
