--- a/src/app/components/qr/qr.component.html
+++ b/src/app/components/qr/qr.component.html
@@ -7,7 +7,7 @@
   <qrcode [qrdata]="QRCI" [width]="256" [errorCorrectionLevel]="'M'" [cssClass]="'tester'"></qrcode>
   <h1>{{'CI.excelente' | translate }}</h1>
   <h3>{{'CI.loesperamos' | translate }}</h3>
-  <ion-card color="warning">
+  <ion-card color="hotel">
     <ion-card-title class="ion-padding">{{'CI.detalle' | translate }}</ion-card-title>
     <ion-card-content>
       <ion-item>
