--- a/src/app/home/consumos/consumos.page.html
+++ b/src/app/home/consumos/consumos.page.html
@@ -25,7 +25,7 @@
       <ion-col size="3">{{bc.date}}</ion-col>
       <ion-col size="5">{{bc.item}}</ion-col>
       <ion-col size="2">{{bc.value}}</ion-col>
-      <!-- <ion-col size="2" class="ion-text-center ion-no-padding ion-no-margin" (click)="disputar(bc.date, bc.item)"><h2 class="ion-no-margin"><ion-icon name="warning" color="warning" slot="icon-only" class="ion-no-padding ion-no-margin"></ion-icon></h2> 
+      <!-- <ion-col size="2" class="ion-text-center ion-no-padding ion-no-margin" (click)="disputar(bc.date, bc.item)"><h2 class="ion-no-margin"><ion-icon name="warning" color="hotel" slot="icon-only" class="ion-no-padding ion-no-margin"></ion-icon></h2> 
       </ion-col>-->
     </ion-row>
   </ion-card>
@@ -53,7 +53,7 @@
       <ion-col size="3">{{bc.date}}</ion-col>
       <ion-col size="5">{{bc.item}}</ion-col>
       <ion-col size="2">{{bc.value}}</ion-col>
-      <!-- <ion-col size="2" class="ion-text-center ion-no-padding ion-no-margin" (click)="disputar(bc.date, bc.item)"><h2 class="ion-no-margin"><ion-icon name="warning" color="warning" slot="icon-only" class="ion-no-padding ion-no-margin"></ion-icon></h2>
+      <!-- <ion-col size="2" class="ion-text-center ion-no-padding ion-no-margin" (click)="disputar(bc.date, bc.item)"><h2 class="ion-no-margin"><ion-icon name="warning" color="hotel" slot="icon-only" class="ion-no-padding ion-no-margin"></ion-icon></h2>
       </ion-col> -->
     </ion-row>
   </ion-card>
