--- a/src/app/home/misdatos/misdatos.page.html
+++ b/src/app/home/misdatos/misdatos.page.html
@@ -1,7 +1,7 @@
 <app-header titulo="{{'MISDATOS.titulo' | translate }}"></app-header>
 
 <ion-content>
-  <ion-card  color="warning">
+  <ion-card  color="hotel">
     <ion-card-header>
       <ion-card-title class="ion-text-center">{{user.name}}</ion-card-title>
       <ion-card-subtitle class="ion-text-center">{{user.dni}}</ion-card-subtitle>
@@ -53,5 +53,5 @@
       </ion-item>
     </ion-card>
   </ion-card>
-  <ion-button expand="block" color="warning" (click)="onPreUpdateUser(usuario)">{{'MISDATOS.misdatos' | translate }}</ion-button>
+  <ion-button expand="block" color="hotel" (click)="onPreUpdateUser(usuario)">{{'MISDATOS.misdatos' | translate }}</ion-button>
 </ion-content>
