--- a/src/app/home/index/index.page.html
+++ b/src/app/home/index/index.page.html
@@ -19,9 +19,8 @@
 
     <ion-card *ngIf="booksOUT">
         <ion-card-content *ngFor="let bookCH of booksOUT">
-            <ion-card-title>{{'INDEX.rvaappch' | translate }}</ion-card-title>
-            <ion-card-subtitle>{{'INDEX.qr' | translate }}</ion-card-subtitle>
-            <ion-item (click)="mostrarQR(bookCH.id)" color="warning">
+            <ion-card-title>{{'CO.rvaappout' | translate }} {{bookCH.pnr}}</ion-card-title>
+            <ion-item color="warning">
                 <p> {{'INDEX.cod' | translate }} {{bookCH.pnr}} - {{bookCH.ota}}</p>
                 <p>CI: {{bookCH.ci.toDate() | date:'dd/MM/yyyy'}} // CO: {{bookCH.co.toDate() | date:'dd/MM/yyyy'}}
             </ion-item>
