--- a/src/app/home/misreservas/misreservas.page.html
+++ b/src/app/home/misreservas/misreservas.page.html
@@ -1,6 +1,6 @@
 <app-header titulo="{{'MISRESERVAS.titulo' | translate }}"></app-header>
 <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-  <ion-fab-button color="warning" (click)="nuevaRva(idUser)">
+  <ion-fab-button color="hotel" (click)="nuevaRva(idUser)">
     <ion-icon name="add" ></ion-icon>
   </ion-fab-button>
 </ion-fab>
