todo ok (creo q falta dark mode)

--- a/src/app/home/checkout/checkout.page.html
+++ b/src/app/home/checkout/checkout.page.html
@@ -1,4 +1,4 @@
-<app-header titulo="{{'MISCONSUMOS.titulo' | translate }}"></app-header>
+<app-header titulo="CHECK OUT"></app-header>
 <ion-content *ngIf="!!books?.length == 0">
   <h2 class="ion-padding">{{'MISCONSUMOS.aunno' | translate }}</h2>
 </ion-content>
