--- a/src/global.scss
+++ b/src/global.scss
@@ -46,6 +46,14 @@
     --ion-color-hotel-shade: #54b898;
     --ion-color-hotel-tint: #6fd6b5;
   }
+  .ion-color-hotel {
+    --ion-color-base: var(--ion-color-hotel);
+    --ion-color-base-rgb: var(--ion-color-hotel-rgb);
+    --ion-color-contrast: var(--ion-color-hotel-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-hotel-contrast-rgb);
+    --ion-color-shade: var(--ion-color-hotel-shade);
+    --ion-color-tint: var(--ion-color-hotel-tint);
+  }
   .tester{
     text-align: center;
 }
