--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -31,7 +31,7 @@
         <ion-icon name="checkmark-circle" slot="start"></ion-icon>
         <ion-label>CHECK OUT</ion-label>
       </ion-item>
-      <ion-item (click)="goCheckIn()">
+      <ion-item href="/home/info">
         <ion-icon name="information-circle" slot="start"></ion-icon>
         <ion-label>{{'MENU.info' | translate }}</ion-label>
       </ion-item>
