--- a/src/app/home/index/index.page.html
+++ b/src/app/home/index/index.page.html
@@ -26,8 +26,8 @@
             </ion-item>
         </ion-card-content>
     </ion-card>
-
-    <ion-card class="ion-padding" *ngIf="!!booksCH?.length == 0 && !!booksOUT?.length == 0">
+    <!-- *ngIf="!!booksCH?.length == 0 && !!booksOUT?.length == 0"> -->
+    <ion-card class="ion-padding">
         <ion-card-title>{{'INDEX.paso0' | translate }}</ion-card-title>
         <ion-card-content>
             <ion-item>
