--- a/src/app/home/index/index.page.html
+++ b/src/app/home/index/index.page.html
@@ -27,7 +27,7 @@
         </ion-card-content>
     </ion-card>
     <!-- *ngIf="!!booksCH?.length == 0 && !!booksOUT?.length == 0"> -->
-    <ion-card class="ion-padding">
+    <ion-card class="ion-padding" *ngIf="booksCH?.length == 0 && booksOUT?.length == 0">
         <ion-card-title>{{'INDEX.paso0' | translate }}</ion-card-title>
         <ion-card-content>
             <ion-item>
