--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -7,7 +7,7 @@
   <ion-content>
     <ion-list>
       <ion-menu-toggle >
-      <ion-item href="/">
+      <ion-item (click)="goIndex()">
         <ion-icon name="disc" slot="start"></ion-icon>
         <ion-label>Index</ion-label>
       </ion-item>
