--- a/src/app/home/checkin/checkin.page.html
+++ b/src/app/home/checkin/checkin.page.html
@@ -160,3 +160,4 @@
   <br>
   <ion-button expand="block" color="danger" (click)="reCI()">{{'CI.reci' | translate }}</ion-button>
 </ion-content>
+<app-footer></app-footer>
