quite y add android para desplegar actualizacion

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,9 +28,9 @@
       <ion-button (click)="onLoginFB()" expand="block" color="primary">{{'HOME.ingresarcon' | translate }} <ion-icon name="logo-facebook">
         </ion-icon>
       </ion-button>
-      <ion-button (click)="onLoginGoogle()" expand="block" color="success">{{'HOME.ingresarcon' | translate }}<ion-icon name="logo-google">
+      <!-- <ion-button (click)="onLoginGoogle()" expand="block" color="success">{{'HOME.ingresarcon' | translate }}<ion-icon name="logo-google">
         </ion-icon>
-      </ion-button>
+      </ion-button> -->
 
     </ion-card-content>
   </ion-card>
