--- a/src/app/home/index/index.page.html
+++ b/src/app/home/index/index.page.html
@@ -2,12 +2,12 @@
 <ion-content>
     <h2 class="ion-padding" *ngIf="name">{{'INDEX.hola' | translate}} {{name}}!</h2>
     <h2 class="ion-padding" *ngIf="!name">{{'INDEX.continuemos' | translate}} </h2>
-
-    <ion-item *ngIf="!foto" (click)="takePhoto()">
+    
+    <!-- <ion-item *ngIf="!foto" (click)="takePhoto()">
         <ion-text color="danger">
             <h3 class="ion-padding-start">{{'INDEX.xfafoto' | translate }}</h3>
         </ion-text>
-    </ion-item>
+    </ion-item> -->
     <ion-card *ngIf="booksCH">
         <ion-card-content *ngFor="let bookCH of booksCH">
             <ion-card-title>{{'INDEX.rvaappch' | translate }}</ion-card-title>
