--- a/src/app/components/update-user/update-user.component.html
+++ b/src/app/components/update-user/update-user.component.html
@@ -9,42 +9,48 @@
   <form name="userForm" #userForm="ngForm" (ngSubmit)="guardarCambios(userForm)">
     <input type="hidden" name="uid" [(ngModel)]="this.userSvc.selectedUser.uid">
     <ion-card color="hotel" class="ion-margin-vertical">
+      <p>{{'UPDATEUSER.obligatorio' | translate }}</p>
       <ion-card-content class="ion-margin-vertical">
         <ion-item>
           <ion-label>{{'NEWACOMP.nombre' | translate }} </ion-label>
           <br>
-          <ion-input type="text" name="name" [(ngModel)]="this.userSvc.selectedUser.name"></ion-input>
+          <ion-input type="text" name="name" [(ngModel)]="this.userSvc.selectedUser.name" placeholder="Miguel A. Da Vinci"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>{{'CI.dni' | translate }}: </ion-label>
           <br>
-          <ion-input type="number" name="dni" [(ngModel)]="this.userSvc.selectedUser.dni"></ion-input>
+          <ion-input type="number" name="dni" [(ngModel)]="this.userSvc.selectedUser.dni" placeholder="XX.XXX.XXX"></ion-input>
           <ion-icon name="camera" color="primary" (click)="takePhoto()"></ion-icon>
         </ion-item>
         <ion-item>
           <ion-label>Tel: </ion-label>
           <br>
-          <ion-input type="text" name="tel" [(ngModel)]="this.userSvc.selectedUser.tel"></ion-input>
+          <ion-input type="text" name="tel" [(ngModel)]="this.userSvc.selectedUser.tel" placeholder="+XX-XX-XXXX-XXXX"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>Email: </ion-label>
           <br>
-          <ion-input type="text" name="mail" [(ngModel)]="this.userSvc.selectedUser.mail"></ion-input>
+          <ion-input type="text" name="mail" [(ngModel)]="this.userSvc.selectedUser.mail" placeholder="example@example.com"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>{{'MISDATOS.nacionalidad' | translate }}: </ion-label>
           <br>
-          <ion-input type="text" name="nac" [(ngModel)]="this.userSvc.selectedUser.nac"></ion-input>
+          <ion-input type="text" name="nac" [(ngModel)]="this.userSvc.selectedUser.nac" placeholder="Argentina"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>{{'MISDATOS.fnac' | translate }}: </ion-label>
           <br>
-          <ion-input type="text" name="date" [(ngModel)]="this.userSvc.selectedUser.date"></ion-input>
+          <ion-input type="text" name="date" [(ngModel)]="this.userSvc.selectedUser.date" placeholder="dd/mm/aaaa"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>{{'MISDATOS.sexo' | translate }}: </ion-label>
           <br>
-          <ion-input type="text" name="sexo" [(ngModel)]="this.userSvc.selectedUser.sexo"></ion-input>
+          <ion-select class="custom-options" name="sexo" [(ngModel)]="this.userSvc.selectedUser.sexo">
+            <ion-select-option value="Masculino">Masculino</ion-select-option>
+            <ion-select-option value="Femenino">Femenino</ion-select-option>
+            <ion-select-option value="No binario">No binario</ion-select-option>
+          </ion-select>
+          <!-- <ion-input type="text" name="sexo" [(ngModel)]="this.userSvc.selectedUser.sexo"></ion-input> -->
         </ion-item>
       </ion-card-content>
     </ion-card>
