--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,6 @@
 ion-content{
   --background:none;
-  background-image: url('../../assets/img/portada1.svg');
+  background-image: url('../../assets/img/portada.svg');
   background-repeat: no-repeat;
   background-size:cover;
 }
