agregue idiomas a alert y corregi lo de fb

--- a/src/app/home/first/first.page.html
+++ b/src/app/home/first/first.page.html
@@ -21,7 +21,7 @@
         <ion-item>
           <ion-label>{{'NEWACOMP.nombre' | translate }} </ion-label>
           <br>
-          <ion-input type="text" name="name" [(ngModel)]="name" placeholder="Miguel A. Da Vinci"></ion-input>
+          <ion-input type="text" name="name" [(ngModel)]="name" placeholder="Ej. Miguel A. Da Vinci"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>{{'CI.dni' | translate }}: </ion-label>
@@ -42,7 +42,8 @@
         <ion-item>
           <ion-label>{{'MISDATOS.nacionalidad' | translate }}: </ion-label>
           <br>
-          <ion-input type="text" name="nac" [(ngModel)]="nac" placeholder="Argentina"></ion-input>
+          <ion-input type="text" name="nac" [(ngModel)]="nac" placeholder="Ej. Argentina"></ion-input>
+          
         </ion-item>
         <ion-item>
           <ion-label>{{'MISDATOS.fnac' | translate }}: </ion-label>
