--- a/src/app/home/misdatos/misdatos.page.html
+++ b/src/app/home/misdatos/misdatos.page.html
@@ -4,7 +4,8 @@
   <ion-card  color="hotel">
     <ion-card-header>
       <ion-card-title class="ion-text-center">{{user.name}}</ion-card-title>
-      <ion-card-subtitle class="ion-text-center">{{user.dni}}</ion-card-subtitle>
+      <ion-card-subtitle class="ion-text-center">{{user.dni}}
+      <ion-icon *ngIf="user.fotodni" name="checkmark-circle" color="light"></ion-icon> <ion-icon *ngIf="!user.fotodni" name="close-circle" color="danger"></ion-icon></ion-card-subtitle>
     </ion-card-header>
     <ion-card>
       <ion-item>
