--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -16,7 +16,7 @@
         <ion-input type="Email" [(ngModel)]="user.email"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">Password</ion-label>
+        <ion-label position="floating">{{'REGISTRATION.password' | translate }}</ion-label>
         <ion-input type="Password" [(ngModel)]="user.password"></ion-input>
       </ion-item>
         <ion-button color="danger" (click)="userLogin()" expand="block">
