--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -20,7 +20,7 @@
         <ion-input type="Email" [(ngModel)]="email" name="email"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">Password</ion-label>
+        <ion-label position="floating">{{'REGISTRATION.password' | translate }}</ion-label>
         <ion-input type="Password" [(ngModel)]="password" name="password"></ion-input>
       </ion-item>
       <ion-button color="primary" (click)="saveNewUser()" expand="block">
