--- a/src/app/components/terminos/terminos.component.html
+++ b/src/app/components/terminos/terminos.component.html
@@ -6,7 +6,7 @@
 <ion-content class="ion-padding">
     <ion-infinite-scroll>
         <h1>{{'CI.terminos' | translate }}</h1>
-        <ion-text [innerHTML]="'CI.contenido' | translate" class="mb-2"></ion-text>
+        <ion-text [innerHTML]="'CI.contenido' | translate" class="mb-2 ion-text-justify"></ion-text>
         <ion-button slot="end" (click)="closeModal()" expand="block">Close</ion-button>
     </ion-infinite-scroll>
 </ion-content>
