--- a/src/app/home/info/info.page.html
+++ b/src/app/home/info/info.page.html
@@ -1,7 +1,26 @@
 <app-header titulo="{{'MENU.info' | translate }}"></app-header>
 
 
-<ion-content>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat tenetur, repellendus nobis, blanditiis animi ipsa harum velit nihil vero in voluptas ullam alias a magnam esse aut deleniti numquam! Est illo delectus sapiente? Dolorem, quaerat qui? Nulla placeat, amet optio ratione sequi dolores odio impedit rerum quidem, dolorem atque quisquam facilis? Ipsa eveniet culpa provident aliquam nam iste, tempore quae corporis officia eligendi deserunt omnis magnam numquam in. Aliquam laborum cumque, ea et ratione neque in architecto vero quaerat? Explicabo, vitae maiores sint esse libero corrupti commodi vel, aliquam amet atque magnam nesciunt mollitia quidem quo placeat iusto! Porro obcaecati, impedit rem incidunt eum esse aperiam, vitae voluptate eveniet temporibus assumenda eos ex quidem est voluptatem unde consequuntur? Id recusandae quos incidunt adipisci? Provident iste dolore rerum aut, voluptates non? Molestiae, eligendi vitae voluptates exercitationem, incidunt modi, ducimus ea officia neque laborum maiores magnam velit doloremque nemo blanditiis. Voluptate ratione temporibus deleniti, dolorum pariatur nesciunt eius exercitationem illum magni rem inventore incidunt, quasi sapiente quis, ab ut ipsam modi eaque nisi voluptas cumque voluptates atque at. Sequi error aperiam voluptatum voluptatem voluptates maiores, iure iusto veniam dolores autem quod fuga eaque eius officia mollitia vitae officiis soluta molestias facere nisi! Hic rerum nostrum atque amet excepturi modi. Qui, dolorum nesciunt dolorem quaerat quae nulla soluta est fugiat ratione maxime neque, sit ipsum facilis veritatis omnis temporibus? Quo possimus ullam pariatur. Vitae architecto similique est iste. Rem ea, odit dolore magni distinctio voluptates veritatis delectus odio velit similique eaque fugit alias dignissimos ut, minima labore deleniti voluptatum, totam aliquam inventore quidem illo consequuntur nobis. Sequi voluptatum pariatur nihil voluptatem quo. Est, libero numquam quae nulla aperiam quod porro fugit omnis sint rem nihil sit debitis alias modi, quia, enim tenetur quam assumenda. Quis accusamus officia quam eum voluptatibus esse, voluptates facere.</p>
+<ion-content class="ion-padding">
+    <p><strong><u>{{'INFO.tel' | translate }}</u></strong></p>
+    <p>{{'INFO.recep' | translate }}0</p>
+    <p>{{'INFO.resto' | translate }}Altos Resto: 504</p>
+    <p>{{'INFO.ext' | translate }}: {{'INFO.rext' | translate }}</p>
+    <p><strong><u>{{'INFO.horarios' | translate }}</u></strong></p>
+    <p>{{'MISRESERVAS.in' | translate }}: 14hs</p>
+    <p>{{'MISRESERVAS.out' | translate }}: 10am</p>
+    <p>Late check out: {{'INFO.lco' | translate }}</p>
+    <p>{{'INFO.des' | translate }}: 7am a 10am</p>
+    <p>{{'INFO.cafe' | translate }}: 17hs a 20hs</p>
+    <p>{{'INFO.cena' | translate }}: 20hs a 23hs</p>
+    <p><strong><u>{{'INFO.despierte' | translate }}</u></strong></p>
+    <p>{{'INFO.rdespierte' | translate }}</p>
+    <p><strong><u>{{'INFO.lavanderia' | translate }}</u></strong></p>
+    <p>{{'INFO.rlavanderia' | translate }}</p>
+    <p><strong><u>Internet Service</u></strong></p>
+    <p>{{'INFO.wifi' | translate }}</p>
+    <p><strong><u>{{'INFO.caja' | translate }}</u></strong></p>
+    <ion-text [innerHTML]="'INFO.rcaja' | translate"></ion-text>
+    <p>{{'INFO.masinfo' | translate }}</p>
 </ion-content>
 <app-footer></app-footer>
